--- a/SignUp&LogInPage.html
+++ b/SignUp&LogInPage.html
@@ -12,17 +12,21 @@
         <div class="form-container sign-up-container">
             <form id="signUpForm">
                 <h1>Create Account</h1>
-                <label for="one">  Name</label>
+                <label for="one"> <i class="fa-solid fa-file-signature"></i>  Name</label>
                   <input type="text" placeholder="Name" id="one" required  />
-                <input type="email" placeholder="Email" required />
-                <input type="password" placeholder="Password" required />
+                  <label for="two"> <i class="fa-solid fa-envelope"></i>  Email</label>
+                <input type="email" placeholder="Email" id="two" required />
+                <label for="three" ><i class="fa-solid fa-lock"></i></i>  password</label>
+                <input type="password" placeholder="Password"  id="three" required />
                 <button type="submit">Sign Up</button>
             </form>
         </div>
         <div class="form-container login-container">
             <form id="loginForm">
                 <h1>Sign In</h1>
-                <input type="email" placeholder="Email" required />
+                <label for="four">  <i class="fa-solid fa-envelope"></i>  Email</label>
+                <input type="email" placeholder="Email" required  id="four"/>
+                <label for="five"><i class="fa-solid fa-lock"></i>  password</label>
                 <input type="password" placeholder="Password" required />
                 <button type="submit">Sign In</button>
             </form>
