--- a/SocialWorkersWbsite.html
+++ b/SocialWorkersWbsite.html
@@ -13,10 +13,10 @@
                 <a href="#">Social Worker</a>
             </div>
             <ul class="navbar-menu">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="http://127.0.0.1:5500/Home.html" target="_blank">Home</a></li>
+                <li><a href="http://127.0.0.1:5500/About.html" target="_blank">About</a></li>
+                <li><a href="http://127.0.0.1:5500/Services.html" target="_blank">Services</a></li>
+                <li><a href="http://127.0.0.1:5500/Contact.html" target="_blank">Contact</a></li>
             </ul>
         </nav>
     </header>
