--- a/Contact.html
+++ b/Contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
     <link rel="stylesheet" href="style5.css">
+    <script src="https://kit.fontawesome.com/216e0aa98b.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- Navbar -->
@@ -25,12 +26,13 @@
         <h1>Contact Us</h1>
         <div class="contact-details">
             <section class="contact-info">
-                <h2>Our Contact Details</h2>
-                <p><strong>Address:</strong> ekvira nagar trolly line kanjurmarge (E) Mumbai 400042</p>
-                <p><strong>Phone:</strong> 986924454</p>
-                <p><strong>Email:</strong> gade6068@gmail.com</p>
-                <p><strong>GitHub:</strong><a href="https://github.com/Developervikas2000">https://github.com/Developervikas2000</a></p>
-                <p><strong>Linkdian:</strong><a href="www.linkedin.com/in/
+                <h2 style="text-align: center;">Our Contact Details</h2>
+                <h3>vikas arun gade</h3>
+                <p><strong> <i class="fa-solid fa-location-dot"></i> Address:</strong> ekvira nagar trolly line kanjurmarge (E) Mumbai 400042</p>
+                <p><strong> <i class="fa-solid fa-phone"></i> Phone:</strong> 986924454</p>
+                <p><strong> <i class="fa-regular fa-envelope"></i> Email:</strong> gade6068@gmail.com</p>
+                <p><strong> <i class="fa-brands fa-github"></i> GitHub:</strong><a href="https://github.com/Developervikas2000">https://github.com/Developervikas2000</a></p>
+                <p><strong> <i class="fa-brands fa-linkedin"></i> Linkdian:</strong><a href="www.linkedin.com/in/
                     vikas-gade-60b07b267
                     "> www.linkedin.com/in/
                     vikas-gade-60b07b267
