--- a/Services.html
+++ b/Services.html
@@ -13,7 +13,7 @@
             <a href="#" class="navbar-brand">Community Services</a>
             <ul class="navbar-nav">
                 <li><a href="http://127.0.0.1:5500/Home.html" id="homeLink" target="_blank">Home</a></li>
-                <li><a href="http://127.0.0.1:5500/About.htm" id="aboutLink" target="_blank">About</a></li>
+                <li><a href="http://127.0.0.1:5500/About.html" id="aboutLink" target="_blank">About</a></li>
                 <li><a href="http://127.0.0.1:5500/Services.html" id="servicesLink" target="_blank">Services</a></li>
                 <li><a href="http://127.0.0.1:5500/Contact.html" id="contactLink" target="_blank">Contact</a></li>
             </ul>
